--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,16 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'io.rest-assured:rest-assured:4.2.0'
     testImplementation 'io.cucumber:cucumber-java8:5.1.1'
     testImplementation 'io.cucumber:cucumber-junit:5.1.1'
     testImplementation 'io.cucumber:cucumber-java:5.1.1'
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    // https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator
+    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.0'
+    // https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer
+    testCompile group: 'io.cucumber', name: 'cucumber-picocontainer', version: '5.1.3'
 
 }
 configurations {
@@ -30,7 +35,19 @@ task cucumber() {
         javaexec {
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', 'pretty',  '--glue', 'gradle.cucumber', 'src/test/resources']
+            args = ['--plugin', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources/cucumber']
+        }
+    }
+}
+task api_cucumber() {
+    dependsOn assemble, compileTestJava
+    doLast {
+        javaexec {
+            main = "cucumber.api.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = ['--plugin', 'pretty', '--glue', 'api.cucumber', 'src/test/resources/api']
+            systemProperty "username", findProperty("username")
+            systemProperty "password", findProperty("password")
         }
     }
 }
