Fixed final flaky step

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ task cucumber() {
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
             args = ['--plugin', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources/cucumber']
+            systemProperty "chromeDriverPath", findProperty("chromeDriverPath")
         }
     }
 }
