--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ task api_cucumber() {
             main = "cucumber.api.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
             args = ['--plugin', 'pretty',
-                    '--plugin', 'html:target/cucumber-html-reports',
-                    '--plugin', 'json:target/cucumber-html-reports/cucumber.json',
+                    '--plugin', 'html:target/api-html-reports',
+                    '--plugin', 'json:target/api-html-reports/cucumber.json',
                     '--glue', 'api.cucumber', 'src/test/resources/api']
             systemProperty "username", findProperty("username")
             systemProperty "password", findProperty("password")
